# gmailConnectorTest

./: .gitignore  NoMetadataCall.py  addVendors.py  helper_functions.py  main.py  pyproject.toml  vendor_logging.json
labels/: id.json  name.json
